--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Jesus Castro",
+  "type": "module",
   "license": "ISC",
   "dependencies": {
     "sqlite3": "^5.1.7"
